--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-photo-view": "^1.2.3",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
